<resources>
    <string name="app_name">Photos</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="googleDrive">Google Drive</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="about">About Photos</string>
    <string name="failedToLogIn">Failed to log in: %s</string>
    <string name="couldNotViewPhoto">Could not open this photo.</string>
    <string name="unknown">Unknown</string>
    <string name="fileName">File name: %s</string>
    <string name="date">Date: %s</string>
    <string name="failedToFetch">An error occurred when fetching the photos from %s: %s</string>
    <string name="uploadTo">Upload to</string>
    <string name="downloadLocally">Download locally</string>
    <string name="delete">Delete</string>
    <string name="deleteConfirmation">Are you sure you want to delete this photo? This cannot be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <plurals name="updatedSuccessfully">
        <item quantity="one">The photo was updated successfully.</item>
        <item quantity="other">The photos were updated successfully.</item>
    </plurals>
    <plurals name="failedToUpdate">
        <item quantity="one">An error occurred when updating this photo: %s</item>
        <item quantity="other">An error occurred when updating these photos: %s</item>
    </plurals>
    <string name="changeLocation">Change location</string>
    <string name="chooseLocation">Choose a location on the map</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="changeLocationConfirmation">Are you sure you want to change the location of this photo? This cannot be undone.</string>
    <string name="addLocation">Add location</string>
    <string name="saving">Saving...</string>
    <string name="uploading">Uploading...</string>
    <string name="downloading">Downloading...</string>
    <string name="noBackWhenSaving">The changes are currently being applied, please wait.</string>
    <string name="rotateLeft">Rotate left</string>
    <string name="rotateRight">Rotate right</string>
    <string name="blomp">Blomp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logInTo">Log in to %s</string>
    <string name="ok">OK</string>
    <string name="couldNotFetchPhotos">Could not fetch photos from %s: %s</string>
    <string name="localStorage">Local storage</string>
    <string name="selected">Selected</string>
    <plurals name="multipleSelected">
        <item quantity="one">%d photo selected</item>
        <item quantity="other">%d photos selected</item>
    </plurals>
    <string name="location">Location: %s</string>
    <plurals name="multipleLocations">
        <item quantity="one">%d location</item>
        <item quantity="other">%d locations</item>
    </plurals>
    <string name="couldNotFetchPhoto">An error occurred when fetching the full photo: %s</string>
    <string name="noTimezone">Timezone information is unavailable.</string>
    <string name="pCloud">pCloud</string>
    <string name="oneDrive">OneDrive</string>
    <string name="use">Use %s</string>
    <string name="autoUpload">Auto-upload to %s</string>
    <string name="autoUploadFailed">Failed to auto-upload %s. Try uploading it manually.</string>
    <string name="photosFolder">Photos folder for %s</string>
    <string name="invalidFileName">File names can\'t contain any of the following characters: %s</string>
    <string name="fileNameTooLong">File names can\'t be longer than %d characters</string>
    <string name="aboutString"><![CDATA[Photos %1$s<br /><br />By Gustav Lindberg<br /><br />This app is licensed under the <a href="%3$s">GNU GPL 3.0</a>.<br /><br />Source code: <a href="%2$s">%2$s</a>]]></string>
    <string name="uploads">Uploads</string>
    <string name="photoQueued">%s → %s\nQueued</string>
    <string name="photoUploading">%s → %s\nUploading</string>
    <string name="uploadFailed">%s → %s\nFailed</string>
    <string name="uploadProgress">%s → %s\nUploading (%d%%)</string>
    <string name="chooseTimezone">Choose timezone</string>
    <string name="failedToPlayVideo">Failed to play video: %s</string>
    <string name="duration">Duration: %d seconds</string>
    <string name="share">Share</string>
    <plurals name="shareFailed">
        <item quantity="one">Failed to share photo: %s</item>
        <item quantity="other">Failed to share photos: %s</item>
    </plurals>
    <string name="uploaded">Uploaded</string>
    <string name="video">Video</string>
    <string name="noUploads">No photo is currently being uploaded</string>
    <string name="failed">Failed</string>
</resources>