<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="1dp">

    <ImageView
        android:id="@+id/ThumbnailView_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no" />

    <ImageView
        android:id="@+id/ThumbnailView_uploadedMarker"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_gravity="bottom|left"
        android:layout_margin="4dp"
        android:contentDescription="@string/uploaded"
        android:src="@drawable/baseline_cloud_done_24"
        android:visibility="invisible"
        app:tint="@color/white"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/ThumbnailView_uploadingMarker"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_gravity="bottom|left"
        android:layout_margin="4dp"
        android:contentDescription="@string/uploading"
        android:src="@drawable/baseline_cloud_upload_24"
        android:visibility="invisible"
        app:tint="@color/white"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/ThumbnailView_failedMarker"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_gravity="bottom|left"
        android:layout_margin="4dp"
        android:contentDescription="@string/failed"
        android:src="@drawable/baseline_warning_24"
        android:visibility="invisible"
        app:tint="@color/white"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/ThumbnailView_videoMarker"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="bottom|right"
        android:layout_margin="4dp"
        android:contentDescription="@string/video"
        android:src="@drawable/baseline_play_circle_outline_24"
        android:visibility="invisible"
        app:tint="@color/white"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/ThumbnailView_selectedMarker"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="bottom|left"
        android:contentDescription="@string/selected"
        android:src="@drawable/selected"
        android:visibility="invisible"
        tools:ignore="RtlHardcoded" />
</FrameLayout>