<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SettingsActivity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/actionBar"
    tools:context=".activity.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/SettingsActivity_storageSwitchesLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <Button
                android:id="@+id/SettingsActivity_helpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help" />

            <Button
                android:id="@+id/SettingsActivity_feedbackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback" />

            <Button
                android:id="@+id/SettingsActivity_aboutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>